--- a/app/views/calculation_templates/square_form.html.erb
+++ b/app/views/calculation_templates/square_form.html.erb
@@ -1,7 +1,7 @@
 
-<form>
+<form action ="/square/results">
     <label for="giraffe">Enter a number</label>
-    <input id="giraffe" type = "text" placeholder = "what number do you want to square?" name = "elephant">
+    <input id="giraffe" type = "text" placeholder = "what number do you want to square?" name = "number">
 
     <button>Calculate square</button>
 
