--- a/app/views/calculation_templates/square_form.html.erb
+++ b/app/views/calculation_templates/square_form.html.erb
@@ -1,8 +1,11 @@
 
 <form action ="/square/results">
     <label for="giraffe">Enter a number</label>
-    <input id="giraffe" type = "text" placeholder = "what number do you want to square?" name = "number">
+<div>
+    <input id="giraffe" type = "text" placeholder = "What number do you want to square?" name = "number">
+</div>
 
+<div>
     <button>Calculate square</button>
-
+</div>
 </form>
